--- a/style.css
+++ b/style.css
@@ -35,7 +35,6 @@ button {
 
 button:focus {
 	outline: none;
-	box-shadow: 0 0 2px 1px rgba(0, 0, 0, .2);
 }
 
 main {
@@ -44,7 +43,7 @@ main {
 	background-color: rgb(248, 72, 72);
 	padding: 1rem 4rem 1rem;
 	border-radius: 10px;
-	box-shadow: 10px 10px 20px 5px rgba(0, 0, 0, .2);
+	box-shadow: 10px 10px 20px 5px rgba(0, 0, 0, .2), -3px -3px 15px 0  rgb(172, 23, 23) inset;
 }
 
 .shake {
@@ -58,6 +57,7 @@ main {
 	height: 60vh;
 	margin: 0 auto 1rem;
 	background-color: #999;
+	box-shadow: 0 0 4px rgb(158, 30, 30);
 }
 
 #etch-screen div {
